# zntt-control

./: INTEGRACAO_TASKIE.md  README.md  package-lock.json
app/: .eslintrc.cjs  .gitignore  BUILDS.md  package-lock.json  package.json  postcss.config.cjs  quasar.config.js
app/src/: App.vue  index.template.html
app/src-electron/: electron-main.js  electron-preload.js
app/src-electron/database/: db.js  migrations.js
app/src-electron/icons/: PLACE_ICONS_HERE.md
app/src-electron/ipc/: appHandlers.js  attachmentsHandlers.js  categoriesHandlers.js  columnsHandlers.js  importHandlers.js  index.js  projectsHandlers.js  settingsHandlers.js  subtasksHandlers.js  tasksHandlers.js
app/src-electron/utils/: fileManager.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/assets/: design.css
app/src/boot/: pinia.js
app/src/composables/: useIpc.js
app/src/css/: app.scss  quasar.variables.scss
app/src/infrastructure/: api.js
app/src/layouts/: LoginLayout.vue  MainLayout.vue
app/src/pages/: DashboardPage.vue  LoginPage.vue  ProjectBoardPage.vue  SettingsPage.vue
files/: 01-ENVIRONMENT-SETUP.md  02-PROJECT-STRUCTURE.md  03-DATABASE.md  04-IPC-ARCHITECTURE.md  05-FRONTEND-ARCHITECTURE.md  06-THEME-SYSTEM.md  07-FEATURES.md  08-BUILD-WINDOWS.md  OVERVIEW.md
zntt-control/: README.md
zntt-control/project/: .design-canvas.state.json  app.jsx  index.html  mock-data.js  screens-interactive.jsx  screens-static.jsx  styles.css  ui.jsx
(+80 files in other folders)
