[package]
name = "zntt-control"
version = "1.0.0"
description = "Personal project management desktop app"
authors = ["zntt"]
edition = "2021"

[lib]
name = "zntt_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell   = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-fs      = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
